--- a/01_init.yml
+++ b/01_init.yml
@@ -1,7 +1,7 @@
 ---
-#- hosts: nodes
-#  user: root
-#  tasks:
+- hosts: nodes
+  user: root
+  tasks:
 #    - name: copy rsa.pub
 #      authorized_key: user=root key="{{ lookup('file', '/Users/liuhuan/.ssh/id_rsa.pub') }}"
 #      tags:
@@ -25,8 +25,11 @@
 
 #    - name: stop firewalld
 #      shell: systemctl stop firewalld && systemctl disable firewalld
-#
-#    - name: restart
+
+#    - name: 设置时区为上海
+#      shell: timedatectl set-timezone Asia/Shanghai
+
+#    - name: 重启服务器
 #      shell: reboot
 
 #    - name: install epal
@@ -108,7 +111,6 @@
 #      - name: edit named.conf
 #        copy: src=./templates/etc/named.rfc1912.zones dest=/etc/named.rfc1912.zones mode=0640
 
-##       视频配的txt命令文件有坑，named服务起不来，需要按照templates文件中的格式来
 #      - name: edit /var/named/host.com.zone file
 #        copy: src=./templates/var/named/host.com.zone dest=/var/named/host.com.zone mode=0644
 #
@@ -225,61 +227,3 @@
 #  tasks:
 #    - name: 启动docker并设置开机自启
 #      shell: systemctl restart docker && systemctl enable docker
-
-#- hosts: '200'
-#  user: root
-#  tasks:
-#    - name: 下载harbor
-#      shell:
-#        cmd: wget https://github.com/goharbor/harbor/releases/download/v2.2.2/harbor-offline-installer-v2.2.2.tgz
-#        chdir: /opt
-
-#    - name: 下载harbor
-#      copy: src=./templates/opt/harbor-offline-installer-v2.2.2.tgz dest=/opt mode=0644
-#
-#    - name: 解压
-#      shell: tar xf /opt/harbor-offline-installer-v2.2.2.tgz -C /opt/
-
-#    - name: 重命名harbor目录名
-#      shell:
-#        cmd: mv harbor/ harbor-v2.2.2
-#        chdir: /opt
-
-#    - name: 设置harbor软连接
-#      shell: ln -s /opt/harbor-v2.2.2 /opt/harbor
-
-##    - name: 拷贝harbor.yml.tmpl
-##     shell: cp /opt/harbor/harbor.yml.tmpl /opt/harbor/harbor.yml
-
-#    - name: copy harbor.yml到/data/harbor目录下
-#      copy: src=./templates/opt/harbor/harbor.yml dest=/opt/harbor/harbor.yml mode=0644
-
-#    - name: 创建相应目录
-#      shell: mkdir -p /data/harbor/logs
-
-#    - name: harbor依赖于docker-compose，因此需要安装docker-compose
-#      shell: yum install docker-compose -y
-
-#    - name: 执行harbor目录下的install.sh安装脚本
-#      shell: sh /opt/harbor/install.sh
-
-#    - name: 安装nginx
-#      shell: yum install nginx -y
-
-#    - name: 设置nginx代理
-#      copy: src=./templates/etc/nginx/conf.d/harbor.od.com.conf dest=/etc/nginx/conf.d/harbor.od.com.conf mode=0644
-#
-#    - name: 启动nginx并设置开机自启
-#      shell: systemctl start nginx && systemctl enable nginx
-
-#- hosts: '11'
-#  user: root
-#  tasks:
-#    - name: 在7-11中添加一条A记录
-#      blockinfile:
-#        path: /var/named/od.com.zone
-#        insertafter: '^dns(.*)'
-#        block: 'harbor           A 10.4.7.200'
-
-#    - name: 重启named
-#      shell: systemctl restart named
