--- a/09_install_kube_proxy.yml
+++ b/09_install_kube_proxy.yml
@@ -95,3 +95,6 @@
   tasks:
     - name: supervisorctl update
       shell: supervisorctl update
+
+    - name: 等待supervisor启动，需要等待20秒左右
+      pause: seconds=20
