--- a/05_install_kube_apiserver.yml
+++ b/05_install_kube_apiserver.yml
@@ -109,4 +109,7 @@
   user: root
   tasks:
     - name: 更新supervisorctl
-      shell: /usr/bin/supervisorctl update
+      shell: supervisorctl update
+
+    - name: 等待supervisor启动，需要等待20秒左右
+      pause: seconds=20
