--- a/01_install_bind_docker.yml
+++ b/01_install_bind_docker.yml
@@ -11,6 +11,12 @@
         dest: /etc/named.conf
         mode: 0644
 
+    - name: copy packages/etc/named.rfc1912.zones
+      copy:
+        src: packages/etc/named.rfc1912.zones
+        dest: /etc/named/named.rfc1912.zones
+        mode: 0644
+
     - name: copy /var/named/host.com.zone file
       copy:
         src: ./packages/var/named/host.com.zone
@@ -31,6 +37,18 @@
 
     - name: check named server 想要查看输出内容，在命令后加上 -vv 参数
       shell: named-checkconf
+
+- hosts:
+  user: root
+  tasks:
+    - name: 修改DNS为7.11
+      lineinfile:
+        dest: /etc/sysconfig/network-scripts/ifcfg-eth0
+        regexp: '^DNS1='
+        line: 'DNS1=10.4.7.11'
+
+    - name: 重启网卡
+      shell: systemctl restart network
 
 ##   不能加空格
 ##   - name: echo zone content to named.zone file
