--- a/01_install_bind_docker.yml
+++ b/01_install_bind_docker.yml
@@ -14,7 +14,7 @@
     - name: copy packages/etc/named.rfc1912.zones
       copy:
         src: packages/etc/named.rfc1912.zones
-        dest: /etc/named/named.rfc1912.zones
+        dest: /etc/named.rfc1912.zones
         mode: 0644
 
     - name: copy /var/named/host.com.zone file
